html update image to display and fit the screen

--- a/Project_Ajax/style.css
+++ b/Project_Ajax/style.css
@@ -1,1 +1,6 @@
-
+body {
+background-image: url('https://wallpaperaccess.com/full/284500.jpg');
+background-size: cover;
+background-repeat: no-repeat;
+object-fit: contain;
+}
