--- a/Project_Ajax/style.css
+++ b/Project_Ajax/style.css
@@ -3,7 +3,7 @@
   padding: 0px;
 }
 body {
-  background-color: lightblue;
+  background-color: gray;
 }
 
 #container {
@@ -18,6 +18,11 @@ body {
 display: flex;
 justify-content: center;
   height: 100px;
+  border: 4px solid white;
+  text-shadow: 3px 3px black;
+  color: white;
+  background-color: gray;
+
 
 }
 #leftmainbar {
@@ -26,14 +31,17 @@ display: flex;
 
 }
 #leftbar {
-
+color: white;
+text-shadow: 3px 3px black;
   height: 500px;
   width: 180px;
+  /* border: 5px solid white; */
+  background-color: gray;
 
 }
 
 #mainbar {
-
+background-color: gray;
   height: 500px;
 text-align: center;
 width: 1800px;
@@ -45,9 +53,18 @@ width: 1800px;
  height: 130px;
 }
 .catimage {
-border: 3px solid black;
+border: 3px solid white;
 max-height:200px !important;
 
+}
 
+h4{
+color: white;
+text-shadow: 2px 2px black;
+
+}
+
+.button1 {
+  width: 130px;
 
 }
