--- a/Project_Ajax/style.css
+++ b/Project_Ajax/style.css
@@ -18,10 +18,10 @@ body {
 display: flex;
 justify-content: center;
   height: 100px;
-  border: 4px solid white;
   text-shadow: 3px 3px black;
   color: white;
   background-color: gray;
+  margin-top: 100px;
 
 
 }
@@ -49,8 +49,27 @@ width: 1800px;
 }
 
 .button {
- width: 130px;
- height: 130px;
+ width: 200px;
+ height: 60px;
+ border: 3px solid black;
+ font-size: 30px;
+ font-family: sans-serif;
+ color: white;
+background-color: #CD5C5C;
+}
+
+#modalbutton {
+  width: 130px;
+  height:50px;
+  background-color: #CD5C5C;
+  color: white;
+  font-family: sans-serif;
+  font-size: 17px;
+}
+
+#modal {
+display: none;
+
 }
 .catimage {
 border: 3px solid white;
